mau mau zufällige anzahl

--- a/Aufgabe2/style/stylesheet.css
+++ b/Aufgabe2/style/stylesheet.css
@@ -20,7 +20,7 @@
     display: inline-block;
 }
 
-.Handkarten {
+#Handkarten > div {
     border-style: solid;
     width: 200px;
     height: 270px;
